# offline-voice-android

./: .gitignore  PRECISION_OPTIMIZATION_STRATEGY.md  PROJECT_STRATEGIC_ANALYSIS.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/aegis/voice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  assets_loader.cpp  assets_loader.h  fuzzy_match.cpp  fuzzy_match.h  model_crypto.cpp  model_crypto.h  native-lib.cpp  security_check.cpp  security_check.h  user_data_guard.cpp  user_data_guard.h
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/java/com/aegis/voice/: AegisGrammarHelper.kt  AegisInputService.kt  AudioDecoderUtils.kt  FuzzyMatchUtils.kt  MainActivity.kt  NativeLib.kt  StudioActivity.kt  StudioConsole002.kt  UserDictionaryActivity.kt
app/src/main/java/com/aegis/voice/keyboard/: KeyboardUIHelper.kt  SuperSymbolHelper.kt
app/src/main/res/drawable/: bg_card_dark.xml  bg_key_dark.xml  bg_key_white.xml  bg_mic_circle.xml  bg_pulse_ring.xml  bg_rect_key.xml  ic_backspace.xml  ic_close.xml  ic_enter.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_mic.xml  ic_mic_bg_circle.xml  ic_send.xml  ic_shift_icon.xml  ic_space.xml  ic_symbol.xml  ic_unlock.xml
app/src/main/res/layout/: activity_main.xml  activity_studio.xml  activity_user_dictionary.xml  dialog_language_protocol.xml  input_view.xml  keyboard_numpad_panel.xml  keyboard_qwerty_panel.xml  keyboard_super_symbol_panel.xml  keyboard_symbols_panel.xml  keyboard_voice_panel.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  method.xml
app/src/test/java/com/aegis/voice/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
